# VIT

./: .gitignore  CMakeLists.txt  README.MD  README.md  main  main.cpp  run.sh
blood_data/: t10k-images-idx3-ubyte  t10k-labels-idx1-ubyte  train-labels-idx1-ubyte  val-images-idx3-ubyte  val-labels-idx1-ubyte
custom_images/: README.markdown
frontend/: package-lock.json  package.json
frontend/src/app/api/predict/: route.ts
frontend/src/app/api/predict/bloodmnist/: route.ts
frontend/src/app/api/predict/fashionmnist/: route.ts
frontend/src/app/api/predict/mnist/: route.ts
frontend/src/app/bloodmnist/: page.tsx
frontend/src/app/fashionmnist/: page.tsx
frontend/src/app/mnist/: page.tsx
frontend/src/components/: DrawingCanvas.tsx
layers/: all_layers.hpp  batch_normalization_layer.hpp  conv2d_layer.hpp  dense_layer.hpp  dropout_layer.hpp  flatten_layer.hpp  layer.hpp  maxpool2d_layer.hpp  multi_head_attention.hpp  pooling_layer.hpp  projector_layer.hpp  relu_layer.hpp  self_attention.hpp  softmax_layer.hpp  tokenizer.hpp  transformer_layer.hpp  visual_transformer.hpp  vt_cnn.hpp
mnist_data/: load_data.py
model/: cnn.hpp  mlp.hpp  model.hpp  vit_cnn.hpp
utils/: load_dataset.hpp  load_image_stb.hpp  optimizer.hpp  tensor.cu  tensor.hpp  trainer.hpp
utils/tensor/: tensor_cpu.hpp  tensor_cuda.cu  tensor_cuda.cuh
